// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attribute-based modifier 1`] = `
"() => create(Foo, {
  className: \\"hasWhiteText_4b3 Foo_16j\\"
});

css(\`
	/* 2 */
	.Foo_16j { background: red }
	/* 3 */
	.hasWhiteText_4b3 { color: white }
\`);"
`;

exports[`Attribute-based modifier 2`] = `
"() => <Foo className=\\"hasWhiteText_4b3 Foo_16j\\" />;

css(\`
	/* 2 */
	.Foo_16j { background: red }
	/* 3 */
	.hasWhiteText_4b3 { color: white }
\`);"
`;

exports[`Explicitly use modifier 1`] = `
"() => create(Fragment, {}, create(Baz, {
  className: \\"Foo_76l Baz_16j\\"
}), create(Foo, {
  className: \\"Foo_76l\\"
}));

css(\`
	/* 2 */
	.Baz_16j { color: red }
	/* 3 */
	.Foo_76l { color: blue }
\`);"
`;

exports[`Explicitly use modifier 2`] = `
"() => <Fragment><Baz className=\\"Foo_76l Baz_16j\\" /><Foo className=\\"Foo_76l\\" /></Fragment>;

css(\`
	/* 2 */
	.Baz_16j { color: red }
	/* 3 */
	.Foo_76l { color: blue }
\`);"
`;

exports[`Nested modifier 1`] = `
"() => create(Fragment, {}, create(Foo, {
  className: \\"Foo_76l\\"
}), create(Bar, {}, create(Foo, {
  className: \\"Foo_76l Foo_6n9\\"
})));

css(\`
	/* 2 */
	.Foo_6n9 { color: blue }
	/* 3 */
	.Foo_76l { color: red }
\`);"
`;

exports[`Nested modifier 2`] = `
"() => <Fragment><Foo className=\\"Foo_76l\\" /><Bar><Foo className=\\"Foo_76l Foo_6n9\\" /></Bar></Fragment>;

css(\`
	/* 2 */
	.Foo_6n9 { color: blue }
	/* 3 */
	.Foo_76l { color: red }
\`);"
`;

exports[`Simple modifier 1`] = `
"() => create(Foo, {
  className: \\"Foo_16j\\"
});

css(\`
	/* 2 */
	.Foo_16j { color: red }
\`);"
`;

exports[`Simple modifier 2`] = `
"() => <Foo className=\\"Foo_16j\\" />;

css(\`
	/* 2 */
	.Foo_16j { color: red }
\`);"
`;

exports[`collapse single-use modifiers 1`] = `
"() => create(Foo, {}, create(Bar, {
  className: \\"Bar_i3g\\"
}));

css(\`
	/* 2 */
	.Bar_i3g { color: red; border: red solid 1px; background: white }
\`);"
`;

exports[`collapse single-use modifiers 2`] = `
"() => <Foo><Bar className=\\"Bar_i3g\\" /></Foo>;

css(\`
	/* 2 */
	.Bar_i3g { color: red; border: red solid 1px; background: white }
\`);"
`;
